# No-Vacancy-In-Room-Infinity

./: .gitignore  CMakeLists.txt  README.md  shell.html
.github/workflows/: deploy.yml
src/: main.cpp
src/game/: dialogue.hpp  engine.hpp  phone.hpp  types.hpp
src/hotel/: guests.hpp  manager.hpp  rooms.hpp
src/ui/: renderer.hpp
